--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Inside LLM"
+author: "L. Andrew Wray"
+description: "Insight and predictions for complex systems." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "lawray.ai@gmail.com"
+# twitter_username: "twitteruser"
+github_username: "landrewwray"
+linkedin_username: "l-andrew-wray-8309b472"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
