--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Inside LLM"
+title: "Inside the Model"
 author: "L. Andrew Wray"
 description: "Insight and predictions for complex systems." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
