--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ theme: "minima"
   
 
 
-# rss: rss
+rss: rss
 
 kramdown:
   syntax_highlighter_opts:
@@ -30,7 +30,7 @@ kramdown:
     
 plugins:
   - jekyll-sitemap
-#  - jekyll-feed
+  - jekyll-feed
 
 
 titles_from_headings:
